...
            android:id="@+id/index_rb1"
            style="@style/MainRadioBtnStyle"
            android:drawableTop="@drawable/main_kol_selector"
            android:text="@string/mainpage_kollist"/>

        <RadioButton
            android:id="@+id/index_rb2"
            style="@style/MainRadioBtnStyle"
            android:background="@null"
            android:drawableTop="@drawable/main_kol_selector"
            android:gravity="center"
            android:text="@string/mainpage_center"/>

...
            android:id="@+id/index_rb3"
            style="@style/MainRadioBtnStyle"
            android:drawableTop="@drawable/main_myquestion_selector"
            android:text="@string/mainpage_myquestion"/>

        <RadioButton
            android:id="@+id/index_rb4"
            style="@style/MainRadioBtnStyle"
            android:drawableTop="@drawable/main_my_selector"
            android:text="@string/mainpage_more"/>

    </RadioGroup>

...
