...
                android:text="问答"
                android:textColor="@color/title_app"
                android:textSize="@dimen/font_big_more"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/img_otherqueFmt_chat"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/distance_small"
                android:src="@mipmap/main_message_icon"
...
